@@ -192,6 +192,23 @@ _mongoc_get_server_id_from_opts (const bson_t *opts,
 }
 
 
+bool
+_mongoc_validate_legacy_index (const bson_t *doc, bson_error_t *error)
+{
+   /* insert into system.indexes on pre-2.6 MongoDB, allow "." in keys */
+   if (!bson_validate (doc, BSON_VALIDATE_UTF8 | BSON_VALIDATE_EMPTY_KEYS |
+                            BSON_VALIDATE_DOLLAR_KEYS, NULL)) {
+      bson_set_error (error,
+                      MONGOC_ERROR_COMMAND,
+                      MONGOC_ERROR_COMMAND_INVALID_ARG,
+                      "legacy index document contains invalid keys");
+      return false;
+   }
+
+   return true;
+}
+
+
 const bson_validate_flags_t insert_vflags =
    (bson_validate_flags_t) BSON_VALIDATE_UTF8 | BSON_VALIDATE_EMPTY_KEYS |
    BSON_VALIDATE_DOT_KEYS | BSON_VALIDATE_DOLLAR_KEYS;
