@@ -3,6 +3,8 @@ Next Release
 
   * New function mongoc_uri_set_auth_mechanism to update the authentication
     mechanism of a mongoc_uri_t after it is created from a string.
+  * New function mongoc_bulk_operation_insert_with_opts provides immediate
+    error checking.
 
 mongo-c-driver 1.6.0
 ====================
